GENERAL CHANGELOG -

( System )
- (TfV) Disabled being able to upgrade/downgrade between Puppet State and Autonomous Region
- Implemented the Economy mechanic
- Implemented a new "State Titles" mechanic
- Added a button for changing your capital state

( Bug Fixing/Tweaks )
- Fixed the delay in the nuclear bombing animation
- Fascist Eritrea is no longer "Wadiya" from "The Dictator", it will be re-added in the future Meme Mode

( Map )
- Map rework for Serbia, Montenegro, Kenya, Sri Lanka, as well as Ciscaucasia/Southern Russia
- Added the La Perouse Strait, the Strait of Tartary, the Strait of Baltiysk
- Added a decision to build the Nowy Swiat Canal
- Added the "Mombasa Republic" as a releasable tag
- Changed the tag of Benin from "DAH" to "BEN"

( Content )
- Political rework for Serbia, Ireland, Togo, Ghana
- Added the new subideologies "Christian right" and "Nkrumaism"
- Added the 2019 Likud and 2020 Conservative Party of Canada leadership elections
- (TfV) Added decisions to interact with subject states under the category "Subject Affairs"
- (LaR) Added intelligence agencies for Norway, Denmark, Canada, Finland, Bahrain, Greece

( Military )

( GFX )
- Changed the way victory points are displayed
- Bottom-right UI reworked
- Intelligence Agency UI reworked

( SFX )