@@ -1848,6 +1848,7 @@ ideas = {
 			modifier = {
 				industrial_capacity_factory = 0.1
 				production_speed_buildings_factor = 0.1
+				local_resources_factor = 0.1
 				custom_modifier_tooltip = TT_will_affect_expenses
 			}
 		
@@ -1866,6 +1867,7 @@ ideas = {
 			modifier = {
 				industrial_capacity_factory = 0.05
 				production_speed_buildings_factor = 0.05
+				local_resources_factor = 0.05
 				custom_modifier_tooltip = TT_will_affect_expenses
 			}
 			
