@@ -2101,6 +2101,7 @@ election_pulse = {
 }
 
 election_effect = {
+	clr_country_flag = snap_election_in_progress
 	if = {
 		limit = {
 			has_idea = presidential_republic
