@@ -288,10 +288,13 @@
  italy.2.o1: "A win for populism, no doubt!"
 
  #Spain
- spain.1.t: "2018 PP leadership election"
- spain.1.d: "After previous party leader Mariano Rajoy resigned on the 5th of June, a leadership election was called. While many candidates entered, only two made it to the final round. These are Pablo Casado and Soraya Sáenz de Santamaría. Who wins the final round?"
- spain.1.o1: "Pablo Casado"
- spain.1.o2: "Soraya Sáenz de Santamaría"
+ spain.1.t: "The Gürtel Case"
+ spain.1.d: "The extensive political scandal known as the Gürtel case has come to a dramatic conclusion, as the Audiencia Nacional, Spain's highest criminal court, has found dozens of people, as well as the influential Partido Popular (PP), guilty of fraud, money laundering and illegal kickbacks. Faced with the humiliating ruling, Mariano Rajoy has taken responsibility and announced his resignation as the party president, with a leadership election intended to be held within 50 days. Initial electoral polls indicate a notable drop for the party."
+ spain.1.o1: "Finally!"
+ spain.2.t: "19th National Congress of the People's Party"
+ spain.2.d: "The long-awaited leadership election for the §cPartido Popular (PP)§! is being held. Two candidates have made it to the final round; party Vice Secretary General of Communication §cPablo Casado§! and Rajoy's Deputy Prime Minister §cSoraya Sáenz de Santamaría§!. Who will become the next party president?"
+ spain.2.o1: "Pablo Casado"
+ spain.2.o2: "Soraya Sáenz de Santamaría"
 
  #Olympic Games
  olympic_games.1.t: "The XXIII Olympic Winter Games"
@@ -370,6 +373,12 @@
  politics.10.d: "[FROM.GetAdjective] foreign policy has taken a rapid turn. The government under [FROM.GetLeader] ([FROM.GetRulingParty]) has declared its intention to officially establish diplomatic relations with [CHI.GetNameWithFlag], having previously recognized [PRC.GetNameWithFlag] as the legitimate representative of China. [FROM.GetLeader] officially claims that the government has deemed [CHI.GetNameWithFlag] to be a more lucrative diplomatic partner for the [FROM.GetAdjective] people. The true reason behind the move is however up to anyone's guess."
  politics.10.o1: "An unfortunate choice."
  politics.10.o2: "A great choice!"
+ politics.11.t: "Motion of No Confidence"
+ politics.11.d: "Citing the disastrous approval ratings of the sitting government, the majority opposition has ousted [ROOT.GetLeader]'s cabinet in a motion of no confidence! A snap parliamentary election will be held in 30 days, which will determine the next government. We must win it at all costs!"
+ politics.11.o1: "Ridiculous!"
+ politics.12.t: "[FROM.GetAdjective] government ousted in no-confidence vote"
+ politics.12.d: "A snap parliamentary election is underway in [FROM.GetNameWithFlag], following a no-confidence vote in the [FROM.GetParliamentName] that resulted in the ousting of sitting government, headed by [FROM.GetLeader] ([FROM.GetRulingParty]). The opposition MP that introduced the motion cited the disastrous approval ratings of the sitting government as the main reason for the move. It remains to be seen what new kind of government will be formed in 30 days."
+ politics.12.o1: "Politics..."
 
  #Turkey
  turkey.1.t: "Successful Operation Olive Branch"
