@@ -12,6 +12,7 @@
  second_amendment_repealed: "Second Amendment Repealed"
  is_constitutional_monarchy: "Is a Constitutional Monarchy"
  has_monarchist_party: "Has a Royal Dynasty"
+ snap_election_in_progress: "Snap Election in Progress"
 
  # Custom Tooltips
  tooltip_ahistorical_option: "This option is only available when Historical Mode is disabled.\n"
