@@ -11,7 +11,7 @@ GENERAL CHANGELOG -
 - Fascist Eritrea is no longer "Wadiya" from "The Dictator", it will be re-added in the future Meme Mode
 
 ( Map )
-- Map rework for Serbia, Montenegro, Kenya, Sri Lanka, as well as Ciscaucasia/Southern Russia
+- Map rework for Serbia, Montenegro, Kenya, Sri Lanka, as well as Ciscaucasia and Northeast India
 - Added the La Perouse Strait, the Strait of Tartary, the Strait of Baltiysk
 - Added a decision to build the Nowy Swiat Canal
 - Added the "Mombasa Republic" as a releasable tag
@@ -21,6 +21,7 @@ GENERAL CHANGELOG -
 - Political rework for Serbia, Ireland, Togo, Ghana
 - Added the new subideologies "Christian right" and "Nkrumaism"
 - Added the 2019 Likud and 2020 Conservative Party of Canada leadership elections
+- Added the "Motion of No Confidence" event
 - (TfV) Added decisions to interact with subject states under the category "Subject Affairs"
 - (LaR) Added intelligence agencies for Norway, Denmark, Canada, Finland, Bahrain, Greece
 
